# linkify

./: .gitignore  .travis.yml  1.index.js  235.index.js  300.index.js  605.index.js  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  index.html  index.js
.github/workflows/: ci.yml  gh-pages.yml
benches/: bench.rs  url.rs
demo/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
demo/src/: lib.rs
demo/web/: index.html  index.js
fuzz/: Cargo.toml
fuzz/fuzzers/: link_finder.rs
src/: bug.rs  domains.rs  email.rs  finder.rs  lib.rs  main.rs  scanner.rs  url.rs
tests/: bug_reference.rs  domains.rs  email.rs  ipv6.rs  types.rs  url.rs
tests/common/: mod.rs
