[package]
name = "linkify"
version = "0.4.0" # remember to update html_root_url
authors = ["Robin Stocker <robin@nibor.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/robinst/linkify"
homepage = "https://github.com/robinst/linkify"
documentation = "https://docs.rs/linkify"
description = "Finds URLs and email addresses in plain text. Takes care to get the boundaries right with surrounding punctuation like parentheses."
categories = ["text-processing"]
keywords = ["web", "text", "url", "links"]
exclude = ["/.github"]

[dependencies]
memchr = "2.0.1"
