[package]
name = "linkify"
version = "0.8.0" # remember to update html_root_url
authors = ["Robin Stocker <robin@nibor.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/robinst/linkify"
homepage = "https://github.com/robinst/linkify"
documentation = "https://docs.rs/linkify"
description = "Finds URLs and email addresses in plain text. Takes care to get the boundaries right with surrounding punctuation like parentheses."
categories = ["text-processing"]
keywords = ["web", "text", "url", "links"]
exclude = ["/.github"]

[dependencies]
error-chain = "0.12.4"
memchr = "2.0.1"
structopt = "0.3.20"
url = "2.1.1"

[dev-dependencies]
criterion = "0.3"
doc-comment = "0.3.3"


[[bench]]
name = "bench"
harness = false
